<resources>
    <string name="app_name">NDPSongs</string>

    <string name="SongID">Song ID:</string>
    <string name="Song_Title">Song Title:</string>
    <string name="Singers">Singers:</string>
    <string name="Year">Year:</string>
    <string name="RadioStar">Stars:</string>

    <string name="ETTitle">Enter Song Title Here</string>
    <string name="ETSinger">Enter Singers\' Name Here</string>
    <string name="ETYear">Enter Year of Release Here</string>

    <string name="Radio1">1</string>
    <string name="Radio2">2</string>
    <string name="Radio3">3</string>
    <string name="Radio4">4</string>
    <string name="Radio5">5</string>

    <string name="btnInsert">INSERT</string>
    <string name="btnShow">SHOW LIST</string>
    <string name="btnShow5">SHOW ALL SONGS WITH 5 STARS</string>

    <string name="btnUpdate">UPDATE</string>
    <string name="btnDelete">DELETE</string>
    <string name="btnCancel">CANCEL</string>

    <string-array name="SPNOption">
        <item>Show All</item>
        <item>1984</item>
        <item>1999</item>
        <item>2007</item>
        <item>2021</item>
    </string-array>

</resources>