<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/TVID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SongID" />

    <EditText
        android:id="@+id/ETID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TVTitleEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Song_Title" />

    <EditText
        android:id="@+id/ETSongEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/TVSingerEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Singers" />

    <EditText
        android:id="@+id/ETSingerEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/TVYearEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Year" />

    <EditText
        android:id="@+id/ETYearEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/TVStarsEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RadioStar" />

    <RadioGroup
        android:id="@+id/RBGroupEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/RB1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Radio1" />

        <RadioButton
            android:id="@+id/RB2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Radio2" />

        <RadioButton
            android:id="@+id/RB3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Radio3" />

        <RadioButton
            android:id="@+id/RB4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Radio4" />

        <RadioButton
            android:id="@+id/RB5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Radio5" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BtnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/btnUpdate" />

        <Button
            android:id="@+id/BtnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/btnDelete" />
    </LinearLayout>

    <Button
        android:id="@+id/BtnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/btnCancel" />
</LinearLayout>
